updated toml to get qt charts working

--- a/pixi.toml
+++ b/pixi.toml
@@ -28,7 +28,7 @@ yaml-cpp = ">=0.8.0,<0.9"
 nlohmann_json = ">=3.12.0,<4"
 pugixml = ">=1.15,<2"
 libcurl = ">=8.14.1,<9"
-qt6-main = ">=6.9.2,<7"
+# qt6-main = ">=6.9.2,<7"
 libmujoco = ">=3.3.2,<4"
 
 # macOS usa il proprio OpenGL, non serve libgl-devel
